@@ -20,6 +20,9 @@ Revision history for Run-Parts
         Use Travis CI for smoke testing and Coveralls.io for coverage
         reporting.
 
+        New tests added:
+        + Verify behaviour upon unknown backend parameter.
+
 0.06    2013-07-22 20:47:16+02:00
 
         Bump Module::Build requirement to 0.4004 for test_requires.
